<resources>
    <string name="app_name">MySpending</string>
    <string name="action_settings">Settings</string>
    <string name="action_done">done</string>
    <string name="num_pad">キーボード</string>

    <string name="amount_unit">円</string>

    <string name="dell_button_caption">削除</string>
    <string name="dell_message">削除しました。</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="activity_label_summary">サマリー</string>
    <string name="activity_label_spend">支払い</string>
    <string name="activity_label_amount">金額</string>
    <string name="activity_label_memo">メモ</string>
    <string name="activity_label_category">カテゴリ</string>
    <string name="activity_label_payment_date">日付</string>
    <string name="activity_label_history">履歴</string>
    <string name="activity_label_backupAndRestore">バックアップ／リストア</string>

    <string name="menu_nav_home">ホーム</string>
    <string name="menu_nav_view">表示</string>
    <string name="menu_nav_monthly">月サマリー</string>
    <string name="menu_nav_daily">日サマリー</string>
    <string name="menu_nav_calendar">カレンダー</string>
    <string name="menu_nav_history">履歴</string>
    <string name="menu_nav_config">設定</string>
    <string name="menu_nav_category">カテゴリ設定</string>
    <string name="menu_nav_quick">クイック入力設定</string>
    <string name="menu_nav_about">このアプリについて</string>

    <string name="money_decimal_point">0</string>

    <string name="msg_confirm_delete">削除してもよろしいですか？</string>
    <string name="msg_confirm_delete_ok">OK</string>
    <string name="msg_confirm_delete_cancel">Cancel</string>
</resources>
